--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   background-color: rgb(25, 25, 25);
+  padding: 1%;
   color: rgba(187,134,252, 200);
   /*background-image: url("background2.jpg")*/;
 }
@@ -177,11 +178,14 @@ body {
 }
 
 #checkoutDropDown{
-  width: 270px;
+  width: 500px;
   height: 500px;
   float: right;
   background-color: rgb(35, 35, 35);
   position: absolute;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: x-large;
   right: 10px;
   top: 90px;
   border-radius: 25px;
