--- a/styles.css
+++ b/styles.css
@@ -770,13 +770,15 @@ body {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(25,25,25);
+  background-color: rgba(0, 0, 0, 0.9);
   padding: 60px;
 }
 
 .modal-content {
   margin: 5% auto 15% auto;
   border: 1px solid #888;
+  background-image: url("background2.jpg");
+  border-radius: 25px;
   width: 60%;
   padding: 60px;
 }
@@ -990,7 +992,12 @@ overflow: scroll;
 
 
 
+.signUp{
 
+  border-radius: 15px;
+
+
+}
 
 
 
