--- a/styles.css
+++ b/styles.css
@@ -228,6 +228,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.cartButton{
+  height:17px; 
+  margin-right:20px;
+}
+
 @keyframes checkoutOpen{
   from{height:1px; opacity: 0%;}
   to{height:500px; opacity: 100%;}
